[gd_scene load_steps=4 format=3 uid="uid://ch0iq6wdg68dq"]

[ext_resource type="Script" uid="uid://djg8vg3eg6lr4" path="res://questions/choose_the_correct_answer.gd" id="1_m1bjl"]
[ext_resource type="Theme" uid="uid://cr2p7s5fsjbu2" path="res://themes/buttons.tres" id="1_spnmk"]
[ext_resource type="Theme" uid="uid://1vstrjh1n4gu" path="res://themes/question.tres" id="2_n4oxi"]

[node name="ChooseTheCorrectAnswer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1bjl")

[node name="Topic" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_n4oxi")
theme_override_font_sizes/font_size = 16
text = "Topic: "
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Question" type="Label" parent="CenterContainer/VBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("1_spnmk")
text = "Game for the development of media literacy of learners of all ages will be created ithin WP3 as an extension of WP2?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_n4oxi")
theme_override_constants/separation = 8

[node name="Button1" type="Button" parent="CenterContainer/VBoxContainer2/Buttons"]
custom_minimum_size = Vector2(0.37, 0.155)
layout_mode = 2
text = "Atsakymas 1"
alignment = 0
autowrap_mode = 2

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer2/Buttons"]
custom_minimum_size = Vector2(0.245, 0.095)
layout_mode = 2
size_flags_vertical = 3
text = "Atsakymas 2"
alignment = 0
autowrap_mode = 2

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer2/Buttons"]
custom_minimum_size = Vector2(10.185, 3.15)
layout_mode = 2
text = "Atsakymas 3"
alignment = 0
autowrap_mode = 2

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer2/Buttons"]
layout_mode = 2
text = "Atsakymas 4"
alignment = 0
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_n4oxi")

[node name="FeedbackButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Feedback"

[node name="CheckButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Check"

[node name="NextButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next"

[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/FeedbackButton" to="." method="_on_feedback_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
